--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,13 @@
+<style>
+    body{
+        background-color: black;
+        color:goldenrod
+    }
+    .register{
+        color:antiquewhite
+    }
+</style>
+
 <div class="container-fluid">
     <div class="row no-gutter">
         <div class="col-md-12">
@@ -8,7 +18,7 @@
                     <div class="row">
                         <div class="col-lg-10 col-xl-7 mx-auto">
                             <h3 class="display-4">Login</h3>
-                            <p class="text-muted mb-4">Please enter your email ID and password.</p>
+                            <p>Please enter your email ID and password.</p>
                             <form method="POST" action="/users/login">
                                 <div class="form-group mb-3">
                                     <input id="inputEmail" name="email" type="email" placeholder="Email address" required=""
@@ -28,7 +38,7 @@
                                 <div class="text-center d-flex justify-content-between mt-4">
                                     <p>Don't have an account? <a href="/users/register"
                                             class="font-italic text-muted">
-                                            <u>Register</u></a></p>
+                                            <u class="register">Register</u></a></p>
                                 </div>
                             </form>
                         </div>
