--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,1 +1,7 @@
-<img src="/images/error.jpg" alt="error" style="max-width: 100%; max-height: 100vh; margin:auto; display:block">
+<style>
+    body{
+        background-color: black;
+    }
+</style>
+
+<img src="/images/error.png" alt="error" style="max-width: 100%; max-height: 100vh; margin:auto; display:block">
