--- a/views/ide.hbs
+++ b/views/ide.hbs
@@ -63,7 +63,7 @@
 <br>
 
 <br>
-<div class="container">
+{{!-- <div class="container">
     <h1>&nbsp;Collaborations</h1>
     <div style="display:flex; gap:15px;">
         {{#if collabroom}}
@@ -78,4 +78,4 @@
         <h2><b style="color: lightgray;">&nbsp;No collaborations yet.</b></h2>
         {{/if}}
     </div>
-</div>
+</div> --}}
