--- a/views/editor.hbs
+++ b/views/editor.hbs
@@ -79,7 +79,7 @@
     <br>
     <hr>
     <br>
-    <form action="/ide/mail" method="POST">
+    {{!-- <form action="/ide/mail" method="POST">
         <div class="col-md-8">
             <label style="font-size: 30px;" for="friends">COLLABORATE WITH FRIENDS</label>
             <input type="text" class="form-control" id="friends" name="friends">
@@ -90,7 +90,7 @@
         <!--<script>alert(document.getElementById("roomId1").value);</script>-->
         <br>
         <button type="submit" class="btn btn-primary">SUBMIT</button>
-    </form>
+    </form> --}}
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.4/codemirror.min.js"></script>
